--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
         <title>Ejercicio 1 - NUCBA</title>
     </head>
     <body>
-        <h1>Curriculum Vitae de Lionel Messi</h1>
         <div>
+            <nav>
+                <a href="/ejercicio2.html">Ejercicio 2</a>
+                <a href="/ejercicio3.html">Ejercicio 3</a>
+            </nav>
+        </div>
+        <div>
+            <h1>Curriculum Vitae de Lionel Messi</h1>
             <h2>Datos personales</h2>
             <ul>
                 <li>Nombre completo: <b>Lionel Andrés Messi Cuccittini</b></li>
