--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -7,8 +7,15 @@
         <title>Ejercicio 2 - NUCBA</title>
     </head>
     <body>
-        <h1>Programación Web Full Stack</h1>
         <div>
+            <nav>
+                <a href="/ejercicio1.html">Ejercicio 1</a>
+                <a href="/ejercicio3.html">Ejercicio 3</a>
+            </nav>
+        </div>
+        
+        <div>
+            <h1>Programación Web Full Stack</h1>
             <h2>Módulos de la cursada</h2>
             <ol>
                 <li>Diseño Web:
