--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -7,8 +7,15 @@
         <title>Ejercicio 3 - NUCBA</title>
     </head>
     <body>
-        <h1>Formulario de registro</h1>
         <div>
+            <nav>
+                <a href="/ejercicio1.html">Ejercicio 1</a>
+                <a href="/ejercicio2.html">Ejercicio 3</a>
+            </nav>
+        </div>
+        
+        <div>
+            <h1>Formulario de registro</h1>
             <form>
                 <div>
                     <label for="nombre">Nombre:</label>
