--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <nav>
-                <a href="/ejercicio1.html">Ejercicio 1</a>
+                <a href="/index.html">Ejercicio 1</a>
                 <a href="/ejercicio3.html">Ejercicio 3</a>
             </nav>
         </div>
