--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -6,14 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ejercicio 2 - NUCBA</title>
     </head>
-    <body>
-        <div>
-            <nav>
-                <a href="/index.html">Ejercicio 1</a>
-                <a href="/ejercicio3.html">Ejercicio 3</a>
-            </nav>
-        </div>
-        
+    <body>       
         <div>
             <h1>Programación Web Full Stack</h1>
             <h2>Módulos de la cursada</h2>
@@ -77,5 +70,10 @@
                 </li>
             </ul>
         </div>
+
+        <footer>
+            <a href="/ejercicio1.html">Ir a Ejercicio 1</a>
+            <a href="/ejercicio3.html">Ir a Ejercicio 3</a>
+        </footer>
     </body>
 </html>
