--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -8,13 +8,6 @@
     </head>
     <body>
         <div>
-            <nav>
-                <a href="/index.html">Ejercicio 1</a>
-                <a href="/ejercicio2.html">Ejercicio 3</a>
-            </nav>
-        </div>
-        
-        <div>
             <h1>Formulario de registro</h1>
             <form>
                 <div>
@@ -51,5 +44,10 @@
                 </div>
             </form>
         </div>
+        
+        <footer>
+            <a href="/ejercicio1.html">Ir a Ejercicio 1</a>
+            <a href="/ejercicio2.html">Ir a Ejercicio 2</a>
+        </footer>
     </body>
 </html>
