--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     </head>
     <body>
         <div>
-            <nav>
-                <a href="/ejercicio2.html">Ejercicio 2</a>
-                <a href="/ejercicio3.html">Ejercicio 3</a>
-            </nav>
-        </div>
-        <div>
             <h1>Curriculum Vitae de Lionel Messi</h1>
             <h2>Datos personales</h2>
             <ul>
@@ -38,5 +32,10 @@
                 <li>2022: <b>Copa Mundial de la FIFA - Qatar 2022</b></li>
             </ul>
         </div>
+
+        <footer>
+            <a href="/ejercicio2.html">Ir a Ejercicio 2</a>
+            <a href="/ejercicio3.html">Ir a Ejercicio 3</a>
+        </footer>
     </body>
 </html>
