--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -70,9 +70,9 @@
                 </li>
             </ul>
         </div>
-
+        <br>
         <footer>
-            <a href="/ejercicio1.html">Ir a Ejercicio 1</a>
+            <a href="/index.html">Ir a Ejercicio 1</a>
             <a href="/ejercicio3.html">Ir a Ejercicio 3</a>
         </footer>
     </body>
