--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -44,9 +44,9 @@
                 </div>
             </form>
         </div>
-        
+        <br>
         <footer>
-            <a href="/ejercicio1.html">Ir a Ejercicio 1</a>
+            <a href="/index.html">Ir a Ejercicio 1</a>
             <a href="/ejercicio2.html">Ir a Ejercicio 2</a>
         </footer>
     </body>
